syntax = "proto3";
package proto;

option go_package = "./proto";

message CharacterStatsTestResult {
	repeated double final_stats = 1;
}

message StatWeightsTestResult {
	repeated double weights = 1;
}

message DpsTestResult {
	double dps = 1;
	double tps = 2;
	double dtps = 3;
}

message TestSuiteResult {
	// Maps test names to their results.
	map<string, CharacterStatsTestResult> character_stats_results = 2;

	// Maps test names to their results.
	map<string, StatWeightsTestResult> stat_weights_results = 3;

	// Maps test names to their results.
	map<string, DpsTestResult> dps_results = 1;
}
